@@ -1,5 +1,5 @@
 Package: digest
-Version: 0.6.1
+Version: 0.6.2
 Date: $Date$
 Author: Dirk Eddelbuettel <edd@debian.org> with contributions 
  by Antoine Lucas, Jarek Tuszynski, Henrik Bengtsson, Simon Urbanek,
